[ISDK-41] fixed overlapped text before assessment
also fixed event view’s checkin button only show “view checkin” when
submission is completed (not in-progress)

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,6 +86,9 @@ $colors: (
   )
 );
 
+$item-md-detail-push-color: color($colors, primary-light, base);
+$item-wp-detail-push-color: color($colors, primary-light, base);
+$item-ios-detail-push-color: color($colors, primary-light, base);
 
 // App iOS Variables
 // --------------------------------------------------
